@@ -1,6 +1,10 @@
 Changes in quota-tools from 3.03 to 3.04
 * added -D_FILE_OFFSET_BITS=64 to Makefile - fixes problems with large files with some libcs (Michael Meskes)
 * added -p (print state) to quotaon (Vladimir Linek, Jan Kara)
+* made quotaon(8) write better error messages (Jan Kara)
+* make install now creates man directories (Jan Kara)
+* added -q <quotatab> and -c <configfile> options to warnquota(8) (Jan Kara)
+* added some notes about quotatab to warnquota manpage (Jan Kara)
 
 Changes in quota-tools from 3.02 to 3.03
 
